# zr

./: .travis.yml  BUGS.md  Cargo.toml  benchmark.zsh  changelog.md  readme.md
.github/workflows/: rust.yml
benches/: bench.rs  zshrc-zr
src/: error.rs  identifier.rs  lib.rs  main.rs  plugin.rs  plugins.rs
