[package]
name = "zr"
version = "1.1.0"
authors = ["Jonathan Dahan <hi@jonathan.is>"]
description = "quick, simple zsh package manager"
readme = "readme.md"
keywords = ["zsh", "package", "manager", "cli"]
license = "MPL-2.0"
repository = "https://github.com/jedahan/zr.git"
edition = "2021"

[dependencies]
git2 = "0.16.1"
directories = "4.0.1"
url = "2.3.1"
git2_credentials = "0.10.0"

[profile.release]
strip = true
